# mcph

./: .cruft.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: deploy-pypi.yml  test.yml
docs/: Makefile  conf.py  index.rst  remove_trash.py  requirements.txt
docs/_templates/: badges.html  github.html  moreinfo.html
docs/modules/: modules.rst
mc_plugin_helper/: __init__.py  __main__.py  cli.py  config.py  main.py  nice_echo.py  plugin_manager.py
mc_plugin_helper/file_manager/: __init__.py  abstract.py  factory.py  local.py
mc_plugin_helper/library_manager/: __init__.py  abstract.py  factory.py  spigot.py
mc_plugin_helper/models/: __init__.py  plugin.py
mcph/: __main__.py  config.py  nice_echo.py  plugin_manager.py
mcph/file_manager/: abstract.py  factory.py  local.py
mcph/library_manager/: abstract.py  factory.py  spigot.py
mcph/models/: __init__.py  plugin.py
tests/: __init__.py  conftest.py  test_config.py
tests/models/: test_plugin.py
tests/plugin_manager/: test_plugin_manager_class.py
tests/test_example/: test_some_function.py
