[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcph = "mcph.__main__:run"


[tool.poetry]
name = "mcph"
description = "Minecraft plugin helper, updates and checks versions of all plugins on a server!"
version = "0.1.0-beta.dev"
license = "AGPL3"
authors = ["PerchunPak <perchunpak@gmail.com>"]
readme = "README.md"
repository = "https://github.com/PerchunPak/mcph"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Home Automation",
  "Topic :: Internet",
  "Topic :: Internet :: File Transfer Protocol (FTP)",
  "Topic :: Software Development :: Version Control",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

# Our dependecies
pyyaml = "6.0"
requests = ">=2.13"
prettytable = "~3.6"
typer = "~0.6"
omegaconf = "~2.3"

structlog = "22.3.0"
### For colors in structlog ###
### Only needed for Windows ###
colorama = { version = "*", markers="platform_system == 'Windows'" }


[tool.poetry.group.make.dependencies]
black = "~22"
isort = "~5.10"
pycln = "~2.1"
doc8 = "~1.0"
mypy = "*"  # dependabot can't update non semver dependencies with our config, see e9376da in python-template
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
# workaround before https://github.com/cruft/cruft/pull/197 will be merged
cruft = { git = "https://github.com/OverkillGuy/cruft", branch = "fix-extension-context" }
lice = "~0.6"  # for generating template

pre-commit = "~2.20"


[tool.poetry.group.tests.dependencies]
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-testmon = "~1.4"
pytest-randomly = "~3.12"
Faker = "~15.3"


[tool.poetry.group.docs.dependencies]
sphinx = "~5.3"
sphinx-autodoc-typehints = "~1.19"
sphinx-autoapi = "~2.0"
sphinx-intl = "~2.0"  # only for locales
furo = "*"
m2r2 = "~0.3"
tomli = { version = "~2.0", markers = "python_version < '3.11'" }
packaging = "22.0"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.28"
GitPython = "~3.1"


[tool.black]
line-length = 120
target-version = ['py38']
